# openai.rs

./: .gitignore  Cargo.toml  README.md  config.yaml
.openapi-generator/: FILES
openai/: Cargo.toml
openai/src/: main.rs
openapi_definition/: Cargo.toml
openapi_definition/config/: openapi_sanitized.yaml
openapi_definition/src/: logger.rs  main.rs  openapi.rs  update.rs
rust_client/: Cargo.toml  README.md
rust_client/docs/: CreateAnswerRequest.md  CreateChatCompletionRequest.md  CreateClassificationRequest.md  CreateCompletionRequest.md  CreateFineTuneRequest.md
rust_client/src/apis/: configuration.rs  open_ai_api.rs
rust_templates/reqwest/: api.mustache  configuration.mustache
