[package]
name = "openapi_definition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
serde_yaml = "0.9"
reqwest = { version = "0.11", default_features = false, features = ["blocking", "native-tls"] }
